# ORC_bound

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  requirements.txt
docs/source/: algorithm.rst  api.rst  conf.py  index.rst  installation.rst
docs/source/_static/: README.txt
docs/source/_templates/: README.txt
orc_bound/: __init__.py
orc_bound/core/: __init__.py  curvature.py  distance.py  measures.py  upper_bound.py
orc_bound/utils/: __init__.py  parallel.py  search.py
tests/: __init__.py  test_orc_bound.py
