[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orc-bound"
version = "0.1.0"
description = "Ollivier-Ricci Curvature (ORC) Lower Bounds via Residual-Shell Measures"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ORC-Bound Team", email = "team@example.com"},
]
keywords = [
    "graph curvature",
    "Ricci curvature",
    "optimal transport",
    "Wasserstein distance",
    "network analysis",
    "random walk",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]
serpapi = [
    "google-search-results>=2.4.0",
]
all = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "google-search-results>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/your-repo/orc-bound"
Documentation = "https://orc-bound.readthedocs.io"
Repository = "https://github.com/your-repo/orc-bound"
Issues = "https://github.com/your-repo/orc-bound/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["orc_bound*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py39"
